<resources>
    <string name="app_name">constraint_layout</string>
    <string name="fav">fav &#x2665;</string>
    <string name="play_now">Play Now</string>
    <string name="top_categories">Top Categories</string>
    <string name="music">Music</string>
    <string name="recommended">Recommended</string>
    <string name="neww">New</string>
    <string name="trending">Trending</string>
</resources>
