<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#142834"
            tools:context=".MainActivity">


        <ImageView
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:src="@drawable/backgroung"/>
        <TextView

                android:textStyle="bold"
                android:text="@string/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/music"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="28dp"/>
        <TextView
                android:text="EVERYDAY RAY"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAllCaps="true"
                android:fontFamily="@font/light"
                android:layout_marginTop="80dp"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.015"/>
        <TextView
                android:fontFamily="@font/medium"
                android:text="Fairytale Lullaby"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"

                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                android:textSize="24sp"
                android:layout_marginTop="3dp"/>
        <TextView
                android:text="Lullabies"
                android:textColor="#fff"
                android:fontFamily="@font/light"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"/>
        <TextView
                android:text="|"
                android:textColor="#fff"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"/>
        <TextView
                android:text="04:24mins"
                android:layout_marginLeft="2dp"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:fontFamily="@font/light"
                android:textColor="#fff"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        />

        <android.support.constraint.ConstraintLayout

                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="97dp"
                android:background="@drawable/play_shape"
                android:layout_height="32dp"
                app:layout_constraintStart_toEndOf="@+id/music"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
        >
            <ImageView

                    android:scaleType="centerCrop"
                    android:layout_width="20dp"
                    android:id="@+id/a"
                    android:layout_marginLeft="3dp"
                    android:layout_height="15dp"
                    android:src="@android:drawable/ic_media_play"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:fontFamily="@font/book"
                    android:id="@+id/b"
                    android:layout_toRightOf="@id/a"
                    android:layout_width="wrap_content"
                    android:textSize="11sp"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:text="@string/play_now"
                    android:layout_toEndOf="@id/a"
                    android:layout_alignTop="@+id/a"
                    android:layout_alignBottom="@+id/a"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:layout_constraintStart_toEndOf="@+id/a"
                    app:layout_constraintTop_toTopOf="@+id/a"
                    app:layout_constraintBottom_toBottomOf="@+id/a"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="1.0"
                    android:gravity="center_vertical"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
                android:textColor="#fff"
                android:text="@string/top_categories"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/book"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                app:layout_constraintBottom_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                android:textSize="20sp"
        />

        <android.support.v7.widget.RecyclerView
                android:paddingTop="5dp"
                android:paddingLeft="1dp"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_height="110dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/recyclerView"
                android:layout_marginStart="12dp"/>
        💛
        <android.support.design.widget.TabLayout
                android:layout_width="0dp"
                app:tabGravity="fill"
                app:tabMode="scrollable"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="9dp"
                app:tabTextColor="#fff"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                android:layout_marginRight="24dp"
                app:tabIndicatorColor="#00ffffff"
                app:tabBackground="@drawable/tab_selector"
                android:id="@+id/tab_layout"
        >
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended"/>
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neww"/>
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending"/>
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav"/>
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/tab_layout"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0"/>




    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>